Reduce use of guava.